keycloak/instance/kc-minimal.yml
---
## Namespace is deployed with Keycloak Operator
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: keycloak
#  annotations:
#    argocd.argoproj.io/sync-wave: "-2"
---
apiVersion: v1
kind: Service
metadata:
  name: kc-postgres
  namespace: keycloak
  labels:
    app: kc-postgres
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: kc-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kc-postgres
  namespace: keycloak
spec:
  serviceName: kc-postgres
  replicas: 1
  selector:
    matchLabels:
      app: kc-postgres
  template:
    metadata:
      labels:
        app: kc-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            exec:
              command: ["bash","-lc","pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["bash","-lc","pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
